<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="1dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:maxLines="2"
                android:text="@string/faq"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/btn_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_arrow"
                android:contentDescription="@string/arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expandable_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/answer_faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/answer_faq"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>